--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: node_js
 node_js:
   - "4.3"
   - "6.0"
-script: 'npm test'
+script: 'make test-cov'
+after_success: 'make coveralls; make clean'
