--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "aws-kinesis-agg": "^2.2.2",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.12",
     "event-stream": "^3.3.4",
     "istanbul": "^0.4.5",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "mocha-lcov-reporter": "^1.2.0"
   }
 }
