--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "event-stream": "^3.3.4",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
-    "mocha-lcov-reporter": "^1.2.0"
+    "mocha-lcov-reporter": "^1.2.0",
+    "through2": "^2.0.1"
   }
 }
