--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.2.0",
     "through2": "^2.0.1"
+  },
+  "engines": {
+    "node": ">=6"
   }
 }
